<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.example.karyc.testapplication.Data" />

        <variable
            name="interactor"
            type="com.example.karyc.testapplication.PreviewActivity.PreviewActivityInteractor" />
    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cameraImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />


        <ImageView
            android:id="@+id/imageEmail"
            style="@style/PreviewActivityImageElements"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cameraImage"
            app:srcCompat="@drawable/ic_email_black_24dp" />

        <TextView
            android:id="@+id/emailTextView"
            style="@style/PreviewActivityTextElements"
            android:text="@{data.email}"
            app:layout_constraintBottom_toBottomOf="@+id/imageEmail"
            app:layout_constraintStart_toEndOf="@+id/imageEmail"
            app:layout_constraintTop_toTopOf="@+id/imageEmail"
            tools:text="@string/email" />

        <ImageView
            android:id="@+id/imagePhone"
            style="@style/PreviewActivityImageElements"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageEmail"
            app:srcCompat="@drawable/ic_phone_black_24dp" />

        <TextView
            android:id="@+id/phoneTextView"
            style="@style/PreviewActivityTextElements"
            android:text="@{data.getFormattedPhone}"
            app:layout_constraintBottom_toBottomOf="@+id/imagePhone"
            app:layout_constraintStart_toEndOf="@+id/imagePhone"
            app:layout_constraintTop_toTopOf="@+id/imagePhone"
            tools:text="@string/phone" />

        <ImageView
            android:id="@+id/imagePassword"
            style="@style/PreviewActivityImageElements"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagePhone"
            app:srcCompat="@drawable/ic_build_black_24dp" />

        <TextView
            android:id="@+id/passwordTextView"
            style="@style/PreviewActivityTextElements"
            android:text="@{data.password}"
            app:layout_constraintBottom_toBottomOf="@+id/imagePassword"
            app:layout_constraintStart_toEndOf="@+id/imagePassword"
            app:layout_constraintTop_toTopOf="@+id/imagePassword"
            tools:text="@string/password" />

        <Button
            android:id="@+id/buttonSend"
            style="@style/ButtonStylePreviewActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick='@{interactor::onClickSendEmail}'
            android:text="@string/button_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>
